...
      // eslint-disable-next-line react-hooks/exhaustive-deps
    }, [selectedDate])
  );

  return (
    <Container>
      <ScreenHeader title="Resumo por categoria" />
      {isLoading ? (
        <LoadContainer>
          <ActivityIndicator color={theme.colors.primary} size="large" />
        </LoadContainer>
      ) : (
        <Content>
...
